More cleanup on toPath()